a11y: fixes contrast for location selection
via additional styling and updated 3rd-party element use specific to ticket [#408](https://github.com/epimorphics/ukhpi/issues/408) alongside adding missing aria-attributes required for assisted use

--- a/app/assets/stylesheets/_element-rails.scss
+++ b/app/assets/stylesheets/_element-rails.scss
@@ -20,8 +20,8 @@
 }
 
 .el-table .cell {
-  word-break: normal;
   -ms-word-break: normal;
+  word-break: normal;
 }
 
 .el-button--default {
@@ -30,6 +30,11 @@
 
 .el-button--primary {
   background-color: $dark-blue;
+  border-color: $dark-blue;
+  &:any-link, &:focus, &:hover {
+    background-color: $dark-blue-hover;
+    border-color: $dark-blue-hover;
+  }
 }
 
 .el-date-editor {
